<resources>
    <string name="app_name">Rezepte</string>
    <string name="action_settings">Einstellungen</string>
    <string name="name">Name</string>
    <string name="start">Starten</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="schinkenhoernchen">Schinkenhörnchen</string>
    <string name="mohoernchen">Mohörnchen</string>
    <string name="chrihoernchen">Chrihörnchen</string>
    <string name="newRecipe">Neues Rezept</string>
    <string name="minutes">min</string>
    <string name="portions">Portionen</string>
    <string name="title">Rezept Name</string>
    <string name="add_image">Bild hinzufügen</string>
    <string name="save">Speichern</string>
</resources>
